2008-09-07  Alper KANAT  <alperkanat@gmail.com>

	* extra/mail.py, comments/views.py: notifications are not sent to the person
	who sends the comment..
	* extra/messages.py, users/views.py: some messages are moved to
	messages.py.. no need to send the form errors to the template despite
	they're already sent..
	* templates/blog/comments.html: manipulating the comments page's dom, the JS
	now cares about the line breaks..
	* templates/users/registration.html: just a little type correction..
	* templates/users/login.html: thanks to Ozan GÜVEN, error messages in login
	page are no longer in English..
	* polls/views.py, templates/blog/poll.html: changed the stupid
	implementation of using sessions for the poll.. using cookies instead..
	* blog/templatetags/blog_filters.py, templates/blog/pagination.html: search
	pagination works correctly now.. thanks to Ozan GÜVEN who made me realize
	this problem..

2008-09-06  Alper KANAT  <alperkanat@gmail.com>

	* blog/feeds.py, urls.py: raptiye can output a rss feed for any tag now..
	niceeee!.. :)
	* blog/models.py, extra/webcal.py, templates/users/profile.html,
	templates/blog/homepage.html, templates/frontpage/homepage.html: All
	datetime objects shows two digit months and days now..
	* extra/messages.py: corrected a typo..
	* templates/blog/feedburner.html: feedburner has the new feed now..
	* templates/blog/sidebar.html, templates/frontpage/base.html: all rss feed
	links comes from the frontpage model now..
	
2008-09-05  Alper KANAT  <alperkanat@gmail.com>

	* blog/feeds.py: trying to change the locale to make it valid for RFC..
	* session_messages: added..
	* settings-example.py, extra/messages.py, users/views.py: bundled
	session_messages app into raptiye.. this saves a lot of time for me on the
	production server..
	* blog/feeds.py, templates/frontpage/base.html, urls.py: raptiye now also
	has atom feed.. :)
	* comments/views.py: fixed a bug for comments..
	* media/js/raptiye.js: Closed the debugging mode of JS..